# spotify-mcp-server

./: .flake8  .gitignore  .secrets.baseline  CONTRIBUTING.md  LICENSE  README-PT.md  README.md  SECURITY.md  env.example  main.py  makefile  mcp-config.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: __init__.py  config.py  mcp_server.py  service.py
tests/: README.md  __init__.py  test_main.py
